--- a/application-onboarding/cert-manager-appset.yaml
+++ b/application-onboarding/cert-manager-appset.yaml
@@ -24,7 +24,7 @@ spec:
       project: default
       source:
         path: 'common-base/cert-manager/overlays/{{values.env}}'
-        repoURL: https://github.com/r3dact3d/gitops
+        repoURL: https://github.com/taiseerhussein/gitops
         targetRevision: HEAD
       syncPolicy:
         automated:
