--- a/application-onboarding/file-integrity-appset.yaml
+++ b/application-onboarding/file-integrity-appset.yaml
@@ -22,7 +22,7 @@ spec:
       project: default
       source:
         path: 'common-base/openshift-file-integrity'
-        repoURL: https://github.com/r3dact3d/gitops
+        repoURL: https://github.com/taiseerhussein/gitops
         targetRevision: HEAD
       syncPolicy:
         automated:
