--- a/application-onboarding/openshift-config-appset.yaml
+++ b/application-onboarding/openshift-config-appset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       project: default
       source:
-        repoURL: 'https://github.com/r3dact3d/gitops'
+        repoURL: 'https://github.com/taiseerhussein/gitops'
         path: common-base/openshift-config
         targetRevision: HEAD
       destination:
