--- a/application-onboarding/rhacm-appset.yaml
+++ b/application-onboarding/rhacm-appset.yaml
@@ -23,7 +23,7 @@ spec:
       project: default
       source:
         path: common-base/open-cluster-management
-        repoURL: https://github.com/r3dact3d/gitops
+        repoURL: https://github.com/taiseerhussein/gitops
         targetRevision: HEAD
       syncPolicy:
         automated:
