--- a/application-onboarding/openshift-registry-appset.yaml
+++ b/application-onboarding/openshift-registry-appset.yaml
@@ -20,7 +20,7 @@ spec:
       project: default
       source:
         path: common-base/openshift-registry
-        repoURL: https://github.com/r3dact3d/gitops
+        repoURL: https://github.com/taiseerhussein/gitops
         targetRevision: HEAD
       syncPolicy:
         automated:
