--- a/gitops-cluster/application-onboarding-app.yaml
+++ b/gitops-cluster/application-onboarding-app.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     path: application-onboarding 
-    repoURL: https://github.com/r3dact3d/gitops
+    repoURL: https://github.com/taiseerhussein/gitops
     targetRevision: HEAD
   syncPolicy:
     automated:
